# flex

./: .gitignore  README.md  requirements.txt  setup.cfg
baselines/bao/: README.md  environment.yml  model.py  requirements.txt  test.py  train.py
baselines/bao/bao/: main.py
baselines/bao/bao/classifier/: base.py  factory.py  lrd2.py  mlp.py  nn.py  proto.py  r2d2.py  routing.py
baselines/bao/bao/dataset/: loader.py  parallel_sampler.py  parallel_sampler_orig.py  stats.py  utils.py
baselines/bao/conf/: test.yaml  train.yaml
baselines/unifew/: README.md
fewshot/: __init__.py  bootstrap.py  utils.py
fewshot/challenges/: __init__.py  eval.py  registration.py  utils.py
fewshot/clis/: describe.py  merge_predictions.py  plot.py  plot_calibration_curve.py  score_simple.py  score_utils.py  validate.py
fewshot/datasets/: __init__.py  data.py  store.py
fewshot/formatters/: __init__.py  bao.py  glue.py  misc.py  super_glue.py  utils.py
fewshot/hf_datasets_scripts/amazon/: amazon.py
fewshot/hf_datasets_scripts/challenge/: challenge.py
fewshot/hf_datasets_scripts/cr/: cr.py
fewshot/hf_datasets_scripts/flex/: flex.py  flex_utils.py
fewshot/hf_datasets_scripts/huffpost/: huffpost.py
fewshot/hf_datasets_scripts/mr/: mr.py
fewshot/hf_datasets_scripts/subj/: subj.py
fewshot/samplers/: __init__.py  sample.py
fewshot/stores/: __init__.py  bao.py  base.py  glue.py  misc.py  super_glue.py
preprocessing/: fewrel.py
scripts/: README-sample-size.md  fewshot  plotCICoverage.R  plotCIWidth.R  sample_size_simulation.py
test/: test_challenges.py
(+21 files in other folders)
