[metadata]
name = fewshot
version = attr: fewshot.__version__
author = Jonathan Bragg, Arman Cohan, Kyle Lo, Iz Beltagy
author-email = jbragg@allenai.org
home-page = https://github.com/allenai/flex
description = Fewshot learning benchmark for NLP
long-description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = nlp, few-shot learning, meta-learning, benchmarks
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.7
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools >= 46.4
install_requires =
    numpy
    scipy
    pandas  # For scoring
    scikit-learn  # For scoring w/ sklearn.metrics
    tqdm
    click
    hydra-core >= 1.1.0  # For hydra.utils.instantiate recursive instantiation
    datasets > 1.5
scripts =
    scripts/fewshot

[options.package_data]
fewshot = hf_datasets_scripts/*/*.py

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120
